Simplify the [Unit] section

--- a/soft-hwclock.service
+++ b/soft-hwclock.service
@@ -10,8 +10,7 @@ DefaultDependencies=No
 Requires=local-fs.target
 After=local-fs.target
 Wants=time-sync.target
-Conflicts=shutdown.target
-Before=shutdown.target time-sync.target ntpdate.service ntpd.service
+Before=shutdown.target time-sync.target
 
 [Service]
 Type=oneshot
